# aidebate

./: .env.example  .gitignore  Cargo.toml  LICENSE-APACHE  README.md  README_CN.md  debate.db
src/: app_metrics.rs  config.rs  handlers.rs  main.rs  prompts.rs  storage.rs  tools.rs  types.rs
src/debate/: engine.rs  mod.rs
static/: index.html
static/js/: marked.min.js
