[package]
name = "aidebate"
version = "0.1.0"
edition = "2021"

[dependencies]
ai-lib = { path = "../ai-lib", features = ["response_parser"] }
anyhow = "1.0"
async-stream = "0.3"
async-trait = "0.1"
axum = { version = "0.7", features = ["macros", "json"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "macros"] }
tokio = { version = "1.39", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "timeout"] }
tracing = "0.1"
tracing-subscriber = "0.3"
