[package]
name = "aidebate"
version = "0.1.0"
edition = "2021"
authors = ["AI-Protocol Team"]
license = "MIT OR Apache-2.0"
description = "AI Debate System - Multi-provider AI debate with automatic fallback"
repository = "https://github.com/hiddenpath/aidebate"
readme = "README.md"
keywords = ["ai", "debate", "llm", "multi-provider"]
categories = ["command-line-utilities", "web-programming"]

[dependencies]
# Use git dependency until ai-lib-rust 0.6.5 is published to crates.io
ai-lib-rust = { git = "https://github.com/hiddenpath/ai-lib-rust", tag = "v0.6.5" }
anyhow = "1.0.100"
async-stream = "0.3"
async-trait = "0.1"
axum = { version = "0.8.7", features = ["macros"] }
futures = "0.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite"] }
dotenv = "0.15"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.7", features = ["cors", "timeout"] }
tracing = "0.1"
tracing-subscriber = "0.3"
